--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 	<p><b>What, Why, How</b> This is meant to be an easy to learn and adapt resource to do sem-web stuff in the browser. The motivation from this came from my lack of knowledge about js+sem-web and how to use existing libraries and frameworks in the browser.</p>
 	<h3>Comunica+N3</h3>
 	<a href="comunica+n3">view demo</a>
-	<p>This demo uses the <a href="http://comunica.linkeddatafragments.org/">Comunica</a> framework with <a href="https://github.com/rdfjs/N3.js">N3</a> library to parse the RDF and query using SPARQL.</p>
-	<h3>rdfstore.js</h3>
-	<p>This demo uses the <a href="https://github.com/antoniogarrote/rdfstore-js">rdfstore.js</a> library to parse RDF and query using SPARQL.</p>
+	<p>This demo uses the <a href="https://comunica.dev/">Comunica</a> framework with <a href="https://github.com/rdfjs/N3.js">N3</a> library to parse the RDF and query using SPARQL.</p>
+	<h3>RDFa parsing</h3>
+	<a href="rdfa-parser">view demo</a>
+	<p>This demo uses the <a href="https://github.com/rubensworks/rdfa-streaming-parser.js">rdfstore.js</a> library to parse RDF and query using SPARQL.</p>
     <!-- <script src=""></script> -->
 </body>
 </html>
