add demo for shacl-engine

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	<h3>RDFa parsing</h3>
 	<a href="rdfa-parser">view demo</a>
 	<p>This demo uses the <a href="https://github.com/rubensworks/rdfa-streaming-parser.js">rdfstore.js</a> library to parse RDF and query using SPARQL.</p>
+    <h3>Shacl-engine</h3>
+    <a href="shacl-engine">view demo</a>
+    <p>This demo uses the <a href="https://github.com/rdf-ext/shacl-engine">shacl-engine</a> library to validate a RDF graph using SHACL.</p>
     <!-- <script src=""></script> -->
 </body>
 </html>
